# Juggernyaut

./: .gitignore  CMakeLists.txt  README.md  package.json  wrapper.cpp
.cmake/: build-output.cmake  common.cmake  debug-mode.cmake  dependencies.cmake  diagnostics.cmake  install.cmake  libraries.cmake  package.cmake  pre-install.cmake  shared.cmake  utility.cmake
.cmake/ANTLR4/: ExternalAntlr4Cpp.cmake  FetchAntlr4Cpp.cmake
.cmake/compiler/: cpp.cmake  test_hard_float.c
.cmake/components/: cleanup.bat.in  cleanup.sh.in
.cmake/external-scripts/: arch_match.py
.cmake/extra/: jug-docs.html
.cmake/installer/: controller.qs  menu-shortcuts.qs  package-gen.cmake.in  path-setup.qs
.cmake/target-configs/: SYSTEM-TARGET-on-HOST.cmake  linux-arm32-on-arm64.cmake  linux-arm64-on-arm64.cmake  linux-x86_32-on-x86_64.cmake  linux-x86_64-on-x86_64.cmake  mac-arm64-on-arm64.cmake  mac-x86_64-on-x86_64.cmake  windows-arm64-on-arm64.cmake  windows-x86_32-on-x86_64.cmake  windows-x86_64-on-x86_64.cmake
.github/workflows/: _binaries_dynamic_build.yml  _binaries_linux_build.yml  _binaries_mac_build.yml  _binaries_windows_build.yml  binaries.yml  release_assets.yml  (+1 more)
compiler/: CMakeLists.txt  base.actions.cpp  base.actions.hpp  main.cpp  manifest.ini  package.json
configs/: 5.diag  BreakingChanges.hpp  CMakeLists.txt  configs.cpp  configs.hpp  package.json  tomlpp.hpp  workspace.cpp  workspace.hpp
core/: CMakeLists.txt  manifest.ini  package.json
package-manager/: CMakeLists.txt  main.cpp  manifest.ini  package.json
server/: CMakeLists.txt  lspFramework.hpp  main.cpp  package.json
tests/: CMakeLists.txt  manifest.ini
utility/: manifest.ini
(+181 files in other folders)
